--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "https://github.com/chromatone/touchme.git"
   },
   "scripts": {
-    "dev": "vitepress dev --host --port 3442",
-    "build": "vitepress build ",
-    "serve": "vitepress serve --port 3400",
+    "dev": "vite --host --port 3442",
+    "build": "vite build ",
+    "serve": "vite preview --port 3400",
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
@@ -33,7 +33,8 @@
     "tone": "^14.8.38",
     "vitepress-pages": "^0.8.5",
     "vue": "^3.2.31",
-    "webmidi": "^3.0.15"
+    "webmidi": "^3.0.15",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.23",
@@ -44,12 +45,12 @@
     "unplugin-icons": "^0.14.1",
     "unplugin-vue-components": "^0.18.5",
     "vite": "2.9.1",
+    "@vitejs/plugin-vue": "^2.3.1",
     "vite-aliases": "0.9.2",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-pages-sitemap": "^1.2.0",
     "vite-plugin-pwa": "^0.11.13",
     "vite-plugin-windicss": "^1.8.3",
-    "vitepress": "0.22.3",
     "windicss": "3.5.1"
   }
 }
