--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "vite build ",
     "serve": "vite preview --port 3400",
     "deploy": "sh deploy.sh",
-    "start": "cd server && pnpm run server"
+    "start": "cd stats && pnpm run server"
   },
   "dependencies": {
     "@tonaljs/tonal": "^4.6.5",
