--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dev": "vite --host --port 3442",
     "build": "vite build ",
     "serve": "vite preview --port 3400",
-    "deploy": "sh deploy.sh"
+    "deploy": "sh deploy.sh",
+    "server": "node server.js"
   },
   "dependencies": {
     "@tonaljs/tonal": "^4.6.5",
@@ -36,7 +37,8 @@
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
     "webmidi": "^3.0.19",
-    "nanoid": "^3.3.3"
+    "nanoid": "^3.3.3",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.30",
@@ -53,6 +55,8 @@
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-pwa": "^0.12.0",
     "vite-plugin-windicss": "^1.8.4",
-    "windicss": "3.5.1"
+    "windicss": "3.5.1",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0"
   }
 }
