--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vue-router": "^4.0.14",
     "webmidi": "^3.0.19",
     "nanoid": "^3.3.3",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "floating-vue": "^2.0.0-beta.16"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.30",
