--- a/package.json
+++ b/package.json
@@ -23,41 +23,41 @@
   "dependencies": {
     "@tonaljs/tonal": "^4.6.5",
     "@tonejs/midi": "^2.0.28",
-    "@vueuse/core": "^8.2.6",
+    "@vueuse/core": "^8.5.0",
     "@vueuse/gesture": "^1.0.0",
     "cobe": "^0.5.0",
     "color-hash": "^2.0.1",
     "colord": "^2.9.2",
+    "floating-vue": "^2.0.0-y.0",
     "hidpi-canvas": "^1.0.10",
     "midi-writer-js": "^2.1.0",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.4",
     "paper": "^0.12.15",
     "simplex-noise": "^3.0.1",
-    "tone": "^14.8.38",
+    "tone": "^14.8.40",
     "vitepress-pages": "^0.8.5",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.14",
-    "webmidi": "^3.0.19",
-    "nanoid": "^3.3.3",
-    "ms": "^2.1.3",
-    "floating-vue": "^2.0.0-beta.16"
+    "vue": "^3.2.36",
+    "vue-router": "^4.0.15",
+    "webmidi": "^3.0.20"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.30",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@iconify/json": "^2.1.48",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "markdown-it-external-links": "^0.0.6",
     "patch-vue-directive-ssr": "^0.0.1",
     "pug": "3.0.2",
-    "unplugin-auto-import": "^0.7.1",
-    "unplugin-icons": "^0.14.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "2.9.5",
+    "unplugin-auto-import": "^0.8.2",
+    "unplugin-icons": "^0.14.3",
+    "unplugin-vue-components": "^0.19.5",
+    "vite": "2.9.9",
     "vite-aliases": "0.9.2",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-pwa": "^0.12.0",
     "vite-plugin-windicss": "^1.8.4",
-    "windicss": "3.5.1",
-    "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0"
+    "windicss": "3.5.4"
   }
 }
