--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-  "name": "touchme",
-  "license": "MIT",
-  "version": "0.3.3",
-  "author": "Davay42",
-  "homepage": "https://touchme.chromatone.center",
-  "funding": {
-    "type": "ko-fi",
-    "url": "https://ko-fi.com/davay"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/chromatone/touchme.git"
-  },
-  "module": "true",
-  "scripts": {
-    "dev": "vite --host --port 3442",
-    "build": "vite build ",
-    "serve": "vite preview --port 3400",
-    "deploy": "sh deploy.sh",
-    "server": "node server.js"
-  },
-  "dependencies": {
-    "@tonaljs/tonal": "^4.6.5",
-    "@tonejs/midi": "^2.0.28",
-    "@vueuse/core": "^8.6.0",
-    "@vueuse/gesture": "^1.0.0",
-    "cobe": "^0.5.0",
-    "color-hash": "^2.0.1",
-    "colord": "^2.9.2",
-    "floating-vue": "^2.0.0-y.0",
-    "hidpi-canvas": "^1.0.10",
-    "midi-writer-js": "^2.1.0",
-    "ms": "^2.1.3",
-    "nanoid": "^3.3.4",
-    "paper": "^0.12.15",
-    "simplex-noise": "^3.0.1",
-    "tone": "^14.8.40",
-    "vitepress-pages": "^0.8.5",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.15",
-    "webmidi": "^3.0.20"
-  },
-  "devDependencies": {
-    "@iconify/json": "^2.1.57",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0",
-    "markdown-it-external-links": "^0.0.6",
-    "patch-vue-directive-ssr": "^0.0.1",
-    "pug": "3.0.2",
-    "unplugin-auto-import": "^0.8.7",
-    "unplugin-icons": "^0.14.3",
-    "unplugin-vue-components": "^0.19.6",
-    "vite": "2.9.10",
-    "vite-aliases": "0.9.2",
-    "vite-plugin-pages": "^0.23.0",
-    "vite-plugin-pages-sitemap": "^1.2.2",
-    "vite-plugin-pwa": "^0.12.0",
-    "vite-plugin-windicss": "^1.8.4",
-    "windicss": "3.5.4"
-  }
+	"name": "touchme",
+	"version": "0.3.4",
+	"homepage": "https://touchme.chromatone.center",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/chromatone/touchme.git"
+	},
+	"funding": {
+		"type": "ko-fi",
+		"url": "https://ko-fi.com/davay"
+	},
+	"license": "MIT",
+	"author": "Davay42",
+	"module": "true",
+	"scripts": {
+		"build": "vite build ",
+		"deploy": "sh deploy.sh",
+		"dev": "vite --host --port 3442",
+		"serve": "vite preview --port 3400",
+		"server": "node server.js"
+	},
+	"dependencies": {
+		"@tonaljs/tonal": "^4.6.5",
+		"@tonejs/midi": "^2.0.28",
+		"@vueuse/core": "^9.1.0",
+		"@vueuse/gesture": "^1.0.0",
+		"@vueuse/math": "^9.1.0",
+		"cobe": "^0.6.0",
+		"color-hash": "^2.0.1",
+		"colord": "^2.9.3",
+		"floating-vue": "^2.0.0-y.0",
+		"hidpi-canvas": "^1.0.10",
+		"midi-writer-js": "^2.1.0",
+		"ms": "^2.1.3",
+		"nanoid": "^4.0.0",
+		"paper": "^0.12.15",
+		"simplex-noise": "^4.0.0",
+		"tone": "^14.8.40",
+		"vitepress-pages": "^0.8.5",
+		"vue": "^3.2.37",
+		"vue-router": "^4.1.3",
+		"webmidi": "^3.0.21"
+	},
+	"devDependencies": {
+		"@iconify/json": "^2.1.94",
+		"@vitejs/plugin-vue": "^3.0.3",
+		"json-server": "^0.17.0",
+		"json-server-auth": "^2.1.0",
+		"markdown-it-external-links": "^0.0.6",
+		"patch-vue-directive-ssr": "^0.0.1",
+		"pug": "3.0.2",
+		"unplugin-auto-import": "^0.11.1",
+		"unplugin-icons": "^0.14.8",
+		"unplugin-vue-components": "^0.22.4",
+		"vite": "3.0.8",
+		"vite-aliases": "0.9.2",
+		"vite-plugin-pages": "^0.25.0",
+		"vite-plugin-pages-sitemap": "^1.3.0",
+		"vite-plugin-pwa": "^0.12.3",
+		"vite-plugin-windicss": "^1.8.7",
+		"windicss": "3.5.6"
+	}
 }
