--- a/package.json
+++ b/package.json
@@ -17,47 +17,37 @@
 		"build": "vite build ",
 		"deploy": "sh deploy.sh",
 		"dev": "vite --host --port 3442",
-		"serve": "vite preview --port 3400",
-		"server": "node server.js"
+		"serve": "vite preview --port 3400"
 	},
 	"dependencies": {
 		"@tonaljs/tonal": "^4.10.0",
-		"@tonejs/midi": "^2.0.28",
-		"@vueuse/core": "^10.1.2",
-		"@vueuse/gesture": "^1.0.0",
-		"@vueuse/math": "^10.1.2",
-		"cobe": "^0.6.3",
+		"@vueuse/core": "^10.5.0",
+		"@vueuse/math": "^10.5.0",
 		"color-hash": "^2.0.2",
 		"colord": "^2.9.3",
 		"floating-vue": "^2.0.0-y.0",
 		"hidpi-canvas": "^1.0.10",
-		"midi-writer-js": "^2.1.4",
+		"midi-writer-js": "^3.1.1",
 		"ms": "^2.1.3",
-		"nanoid": "^4.0.2",
-		"paper": "^0.12.17",
 		"simplex-noise": "^4.0.1",
 		"tone": "^14.8.49",
-		"vue": "^3.3.4",
-		"vue-router": "^4.2.2",
-		"webmidi": "^3.1.6"
+		"vue": "^3.3.7",
+		"vue-router": "^4.2.5",
+		"webmidi": "^3.1.6",
+		"@unocss/reset": "0.56.5"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.77",
-		"@vitejs/plugin-vue": "^4.2.3",
-		"json-server": "^0.17.3",
-		"json-server-auth": "^2.1.0",
-		"markdown-it-external-links": "^0.0.6",
-		"patch-vue-directive-ssr": "^0.0.1",
+		"unocss": "0.56.5",
+		"@unocss/extractor-pug": "0.56.5",
+		"@iconify/json": "^2.2.136",
+		"@vitejs/plugin-vue": "^4.4.0",
 		"pug": "3.0.2",
-		"unplugin-auto-import": "^0.16.4",
-		"unplugin-icons": "^0.16.3",
-		"unplugin-vue-components": "^0.25.1",
-		"vite": "4.0.5",
-		"vite-aliases": "0.11.2",
+		"unplugin-auto-import": "^0.16.7",
+		"unplugin-icons": "^0.17.3",
+		"unplugin-vue-components": "^0.25.2",
+		"vite": "4.5.0",
 		"vite-plugin-pages": "^0.31.0",
-		"vite-plugin-pages-sitemap": "^1.5.0",
-		"vite-plugin-pwa": "^0.16.4",
-		"vite-plugin-windicss": "^1.9.0",
-		"windicss": "3.5.6"
+		"vite-plugin-pages-sitemap": "^1.6.1",
+		"vite-plugin-pwa": "^0.16.6"
 	}
 }
