--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
 	},
 	"dependencies": {
 		"@tonaljs/tonal": "^4.10.0",
-		"@unocss/reset": "^0.58.2",
-		"@vueuse/core": "^10.7.1",
-		"@vueuse/math": "^10.7.1",
+		"@unocss/reset": "^0.58.4",
+		"@vueuse/core": "^10.7.2",
+		"@vueuse/math": "^10.7.2",
 		"color-hash": "^2.0.2",
 		"colord": "^2.9.3",
-		"floating-vue": "^2.0.0-y.0",
+		"floating-vue": "^5.2.0",
 		"hidpi-canvas": "^1.0.10",
 		"midi-writer-js": "^3.1.1",
 		"ms": "^2.1.3",
 		"simplex-noise": "^4.0.1",
 		"tone": "^14.8.49",
-		"vue": "^3.4.3",
+		"vue": "^3.4.15",
 		"vue-router": "^4.2.5",
 		"webmidi": "^3.1.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.163",
+		"@iconify/json": "^2.2.176",
 		"@unocss/extractor-pug": "0.56.5",
-		"@vitejs/plugin-vue": "^4.6.2",
+		"@vitejs/plugin-vue": "^5.0.3",
 		"pug": "^3.0.2",
-		"unocss": "^0.58.2",
-		"unplugin-auto-import": "^0.17.3",
-		"unplugin-icons": "^0.18.1",
+		"unocss": "^0.58.4",
+		"unplugin-auto-import": "^0.17.5",
+		"unplugin-icons": "^0.18.3",
 		"unplugin-vue-components": "^0.26.0",
-		"vite": "^5.0.10",
+		"vite": "^5.0.12",
 		"vite-plugin-pages": "^0.32.0",
 		"vite-plugin-pages-sitemap": "^1.6.1",
-		"vite-plugin-pwa": "^0.17.4"
+		"vite-plugin-pwa": "^0.17.5"
 	}
 }
