--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"vite": "^5.2.8",
 		"vite-plugin-pages": "^0.32.1",
 		"vite-plugin-pages-sitemap": "^1.6.1",
-		"vite-plugin-pwa": "^0.19.8"
+		"vite-plugin-pwa": "^0.19.8",
+		"vite-plugin-singlefile": "^2.0.0"
 	}
 }
